# mancalculations

./: .gitignore  LICENSE  README.md  connect4.py  constants.py  culations.py  mancal.py  mancala.py  mancalculations.py  runner4.py  simulation.py  test.py  testing.py  top_snapshot.txt  visuals.py
c/: mancalcusims.c
cpp/: main.cpp
mancala/: package.json
mancala/app/: layout.tsx
paper/: config.py  inference.py  inference_batcher.py  kalah.py  mcts.py  mcts_agent.py  profile.txt  profile2.txt  profile3.txt  profile_consumer_48530.stats  profile_mcts_wrapper_48529.stats  run_worker.py  test.py  window.py  worker.py
paper/tests/: mcts_test.py  profile_worker.py
server/: README.md  benchmark.py  config.py  evaluator.py  human.py  kalah_game.py  launch_training.sh  main.py  mcts.py  mcts_wrapper.py  monitor.py  network.py  requirements.txt  self_play.py  test.py  test_installation.py  test_mcts.py  trainer.py
server/mcts/: CMakeLists.txt  kalah_game.cpp  kalah_game.hpp  mcts.cpp  mcts.hpp  neural_network.cpp  neural_network.hpp  python_bindings.cpp  setup.py
v2/: mancala.py  runner.py  test.py
web/: package-lock.json  package.json  postcss.config.mjs
web/app/: ConvexClientProvider.tsx  layout.tsx  middleware.tsx  page.tsx  providers.tsx
web/app/login/: page.tsx
web/convex/: Username.ts  auth.ts  schema.ts
web/convex/mutations/: createStudyUsers.ts
web2/: package-lock.json  package.json
web2/app/: globals.css  page.tsx  providers.tsx
web2/app/login/: page.tsx
web2/app/play/: page.tsx
web2/convex/: schema.ts
web2/convex/_generated/: api.d.ts
